面试题修改

--- a/面试题/计算机网络与网络编程面试题.md
+++ b/面试题/计算机网络与网络编程面试题.md
@@ -226,9 +226,9 @@
 
   
 
-  第一步，客户端会向服务端发送TLS版本、支持的加密算法、以及一个第一随机数
+  第一步，客户端会向服务端发送TLS版本、支持的加密算法、和第一随机数
 
-  第二步，服务端响应客户端，返回的TLS版本、支持的加密算法、和一个第二随机数
+  第二步，服务端响应客户端，返回的TLS版本、支持的加密算法、和第二随机数
 
   第三步，服务器出示SSL证书，客户端通过CA机构，确认证书的合法性
 
