多线程上传和断点续传

--- a/面试题/计算机网络与网络编程面试题.md
+++ b/面试题/计算机网络与网络编程面试题.md
@@ -289,5 +289,11 @@
   CLOSE_WAIT，客户端频繁建立连接并关闭
   
   
+  
+- 如何实现多线程上传和断点续传
 
-https://www.cnblogs.com/alifpga/p/7675850.html
+  客户端将文件进行切分，然后开多个线程，将切分的文件进行上传
+
+  服务端在接收到每个线程的连接请求时，记录线程的传输位置等
+
+  客户端断点续传时，先请求服务端之前每个线程的传输位置，再根据这些传输位置进行上传
