--- a/Linux技术/磁盘、阵列、卷.md
+++ b/Linux技术/磁盘、阵列、卷.md
@@ -49,11 +49,11 @@ blkid /dev/mapper/vgdata-lvdata
 
 
 
-echo "UUID=6e63e433-c978-468c-925c-7e327e0c66ab /data ext4              defaults      0      2" >> /etc/fstab
+echo "UUID=5cd2f497-9e0d-412f-a6dd-6daf29762a61 /data ext4              defaults      0      2" >> /etc/fstab
 
 
 
-
+vgextend vgdata /dev/sdc
 
 lvextend -l +100%FREE /dev/mapper/vgdata-lvdata
 
