--- a/Linux技术/定时任务.md
+++ b/Linux技术/定时任务.md
@@ -30,3 +30,12 @@ service cron restart
 tail -f /var/log/cron.log
 ```
 
+
+
+```sh
+echo "cron.*      /var/log/cron.log" >> /etc/rsyslog.d/50-default.conf
+service rsyslog restart
+service cron restart
+tail -f /var/log/cron.log
+```
+
