--- a/系统架构/日志采集/Elasticsearch/索引模板.md
+++ b/系统架构/日志采集/Elasticsearch/索引模板.md
@@ -109,3 +109,38 @@ POST /_reindex
 }
 ```
 
+
+
+
+
+- reindex集群迁移
+
+```sh
+POST /_reindex
+{
+  "source": {
+    "remote": {
+      "host": "http://10.40.0.75:9200",
+      "username": "elastic",
+      "password": "Ie5cmWSo2OzvFV4exexi"
+    },
+    "index": "cloud_prod_mqtt_message_doc",
+    "query": {
+      "bool": {
+        "filter": {
+          "range": {
+            "createTime": {
+              "gte": "1672502400000",
+              "lt": "1735660800000"
+            }
+          }
+        }
+      }
+    }
+  },
+  "dest": {
+    "index": "cloud_prod_mqtt_message_doc"
+  }
+}
+```
+
